--- a/encuestas/templates/encuestas/lista_encuestas_realizar.html
+++ b/encuestas/templates/encuestas/lista_encuestas_realizar.html
@@ -12,7 +12,7 @@
         <div class="card-body">
             <div class="row">
                 {% for encuesta in object_list %}
-                <div class="col-4 mt-3">
+                <div class="col-md-4 mt-3">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title d-flex justify-content-between align-items-center">
