--- a/encuestas/templates/encuestas/resultados_encuesta.html
+++ b/encuestas/templates/encuestas/resultados_encuesta.html
@@ -2,15 +2,23 @@
 
 {% block content %}
 
-<div class="col-12">
+<div class="col-md-12">
     <h3 class="text-center">{{ encuesta.nombre }}</h3>
-    <div class="row justify-content-center" id="id_divresultados"></div>
-    <div align="center">
-        <button class="btn btn-outline-success mt-3" id="id_cambiargrafico">
-            Cambiar tipo de gráfico
-        </button>
-    </div>
+    {% if not resultados %}
+        <div class="mx-auto">
+            <h4>Esta encuesta no tiene resultados de preguntas que puedan ser graficadas.</h4>
+        </div>
+    {% else %}
+        <div class="row justify-content-center" id="id_divresultados"></div>
+        <div align="center">
+            <button class="btn btn-outline-success mt-3" id="id_cambiargrafico">
+                Cambiar tipo de gráfico
+            </button>
+        </div>
+    {% endif %}
 </div>
+
+{{ resultados|json_script:"json_id_resultados" }}
 
 <script>
     $(document).ready(function () {
@@ -18,68 +26,65 @@
         let migrafico = []
         let config = []
         let data = []
+        let resultados = JSON.parse(document.getElementById('json_id_resultados').textContent)
+        let grafico = ['pie', 'bar']
+        let cambiar = 0
 
-        let resultados = {{ resultados | safe }};
-    // Nunca usar el filtro safe en datos que no sean de confianza (como los datos enviados por un usuario). 
-    // Siempre desinfecte los datos (caracteres no seguros de escape) antes de usar el filtro safe.
-    let grafico = ['pie', 'bar']
-    let cambiar = 0
+        for (let i = 0; i < resultados.length; i++) {
+            let resultado = `<div class="col-md-4 mt-4">
+                                <h5 class="text-center mb-4">${resultados[i]['pregunta']}</h5>
+                                <div>
+                                    <canvas id="id_canvas${i}"></canvas>
+                                </div>
+                            </div>`
 
-    for (let i = 0; i < resultados.length; i++) {
-        let resultado = `<div class="col-md-4 mt-4">
-                            <h5 class="text-center mb-4">${resultados[i]['pregunta']}</h5>
-                            <div>
-                                <canvas id="id_canvas${i}"></canvas>
-                            </div>
-                        </div>`
+            $('#id_divresultados').append(resultado)
 
-        $('#id_divresultados').append(resultado)
+            data[i] = {
+                labels: resultados[i]['labels'],
+                datasets: [{
+                    label: resultados[i]['pregunta'],
+                    data: resultados[i]['contador_respuestas'],
+                    backgroundColor: resultados[i]['colores'],
+                    options: {
+                        maintainAspectRatio: false,
+                    },
+                    hoverOffset: 4
+                }]
+            };
 
-        data[i] = {
-            labels: resultados[i]['labels'],
-            datasets: [{
-                label: resultados[i]['pregunta'],
-                data: resultados[i]['contador_respuestas'],
-                backgroundColor: resultados[i]['colores'],
-                options: {
-                    maintainAspectRatio: false,
-                },
-                hoverOffset: 4
-            }]
-        };
-
-        config[i] = {
-            type: 'pie',
-            data: data[i],
-        };
-
-        migrafico[i] = new Chart(
-            document.getElementById(`id_canvas${i}`),
-            config[i]
-        );
-    }
-
-    $('#id_cambiargrafico').click(function () {
-        if (cambiar == 0) {
-            cambiar = 1
-        } else if (cambiar == 1) {
-            cambiar = 0
-        }
-        for (let i = 0; i < migrafico.length; i++) {
             config[i] = {
-                type: grafico[cambiar],
+                type: 'pie',
                 data: data[i],
             };
 
-            if (migrafico[i]) {
-                migrafico[i].destroy()
-            }
             migrafico[i] = new Chart(
                 document.getElementById(`id_canvas${i}`),
                 config[i]
-            )
+            );
         }
-    })
+
+        $('#id_cambiargrafico').click(function () {
+            if (cambiar == 0) {
+                cambiar = 1
+            } else if (cambiar == 1) {
+                cambiar = 0
+            }
+            for (let i = 0; i < migrafico.length; i++) {
+                config[i] = {
+                    type: grafico[cambiar],
+                    data: data[i],
+                };
+
+                if (migrafico[i]) {
+                    migrafico[i].destroy()
+                }
+                migrafico[i] = new Chart(
+                    document.getElementById(`id_canvas${i}`),
+                    config[i]
+                )
+            }
+        })
 
     });
 
